--- a/src/app/submit/submit.component.html
+++ b/src/app/submit/submit.component.html
@@ -1,6 +1,6 @@
 <div class="submit">
     <mat-card>
-        <h2>News</h2> 
+        <h2>Create News</h2> 
 <p>
     <mat-form-field appearance="outline">
         <mat-label>Title</mat-label>
