--- a/src/app/comment/comment.component.css
+++ b/src/app/comment/comment.component.css
@@ -1,3 +1,9 @@
 :host::ng-deep.mat-form-field {
-    width : 500px; 
+    width : 500px;
  }
+
+ .newsc{
+    color: black;
+    text-decoration: none;
+    font-weight: normal;
+}
