--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -1,13 +1,14 @@
+<mat-card>
 <div *ngFor="let x of ques.data">
     
-    <img (click)="upvote()" height="20px" width="20px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTw6D6HQRkVCK_htqe5KEGgPwsqQSKLax8_jQ&usqp=CAU" alt="upvote" />
-       &nbsp;<a href="{{x.url}}">{{x.title}}</a>
-       <a href="view?url={{x.url}}">({{subs(x.url)}})</a><br>
+    <img (click)="upvote(x.id,x.score)" [hidden]="check(x.vote)" height="20px" width="20px" src="https://th.bing.com/th/id/R.0d64c7042e2a554e3d01a44706f70e9c?rik=jh6jI20OWP89TQ&riu=http%3a%2f%2fwww.i2symbol.com%2fforce_download.php%3ffile%3dimages%2fsymbols%2fgeometry%2fblack_up_pointing_small_triangle_u25B4_icon_256x256.png&ehk=3tZqOdH28lVGq4dFmT%2bcs9tLbZYY7bD%2fHLZE2umgBOQ%3d&risl=&pid=ImgRaw&r=0" alt="upvote" />
+       &nbsp;<a class="newsc" href="{{x.url}}">{{x.title}}</a>
+       <a class="newsc" href="view?url={{x.url}}">({{subs(x.url)}})</a><br>
        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-       make diffdiv{{x.score}} points by <a href="user?user={{x.by}}">{{x.by}}</a> 
+       {{x.score}} points by <a href="user?user={{x.by}}">{{x.by}}</a> 
        &nbsp;
-      <a href="comment?id={{x.id}}">{{caltime(x.time)}}</a>|<a href="" (click)="adhide()">hide</a>|
-      <a href="comment?id={{x.id}}">{{x.kids.length}}comments</a>
+      <a class="newsc" href="comment?id={{x.id}}">{{caltime(x.time)}}</a>|<a [hidden]="!check(x.vote)" (click)="unvote(x.id,x.score)">unvote</a>|
+      <a class="newsc" href="comment?id={{x.id}}">{{x.kids.length}}comments</a>
       
   </div>
   <mat-form-field appearance="fill">
@@ -16,6 +17,8 @@
   </mat-form-field>
   <div>
   <button mat-raised-button  (click)="addc(comment.value)">add comment</button>
+  </div>
+  </mat-card>
   <div>
     <mat-stepper orientation="vertical">
       <mat-step *ngFor="let x1 of com.data">
