--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -17,7 +17,7 @@
     font-weight: bold;
 }
 
-.nav-bar a{
+.nav-bara{
     margin: 10px;
     text-decoration: none;
     color: black;
@@ -26,4 +26,8 @@
 .nav-bar a::after{
     margin-left: 10px;
     content: "|";
+}
+
+.nav-barbutton{
+    margin-left: 450px;
 }
